Thu Feb 12 18:47:44 GMT 2004 (njh)
----------------------------------
  * libclamav: Use mkstemp() on Solaris in cl_mbox()

Wed Feb 11 18:00:13 CET 2004 (tk)
---------------------------------
  * libclamav: enabled autodetection of Eserv/2 mail files (thanks to
	       Andrey Cherezov <andrey@cherezov.koenig.su>)

Wed Feb 11 08:19:54 GMT 2004 (njh)
----------------------------------
  * libclamav: Use O_BINARY when saving attachments which is required for
	Cygwin. Thanks to "Andrey Cherezov" <andrey@cherezov.koenig.su>

Wed Feb 11 00:08:26 CET 2004 (tk)
---------------------------------
  V 0.66 (released with OLE2 and Dazuko support disabled)

Tue Feb 10 23:54:47 CET 2004 (tk)
---------------------------------
  * docs: updated clamdoc.pdf
  * docs: updated Polish how-to (thanks to Przemyslaw Holowczyc)

Tue Feb 10 19:17:53 CET 2004 (tk)
---------------------------------
  * docs: complete clamdoc.pdf French translation by Stephane Jeannenot
  * docs: Polish how-to on ClamAV and Sendmail integration (with clamav-milter)
	  by Przemyslaw Holowczyc

Tue Feb 10 17:05:31 GMT 2004 (njh)
----------------------------------
  * libclamav:	Recognised new kind of bounce message

Tue Feb 10 14:38:35 GMT 2004 (njh)
----------------------------------
  * contrib:	Removed mfc30d.dll. It can now be downloaded (if needed)
  	from http://www.clamav.net/w32/mfc30d.zip

Tue Feb 10 14:35:07 CET 2004 (tk)
---------------------------------
  * clamd: UseProcesses - permanently removed

Tue Feb 10 10:38:08 GMT 2004 (trog)
-----------------------------------
  * libclamav/ole2_extract.c: Improve error handling

Tue Feb 10 10:21:02 GMT 2004 (njh)
----------------------------------
  * contrib:	The Windows client now recovers better from errors during
  	scanning

Mon Feb  9 17:46:29 GMT 2004 (njh)
----------------------------------
  * contrib:	The Windows client now allows the port to be specified

Mon Feb  9 14:03:50 GMT 2004 (trog)
-----------------------------------
