@@ -1,3 +1,7 @@
+Fri Feb 13 14:28:05 GMT 2004 (njh
+----------------------------------
+  * libclamav: Added a new bounce delimeter
+
 Thu Feb 12 18:47:44 GMT 2004 (njh)
 ----------------------------------
   * libclamav: Use mkstemp() on Solaris in cl_mbox()
